--- a/style/style.css
+++ b/style/style.css
@@ -7,13 +7,17 @@
     font-family: 'Poppins', sans-serif;
 }
 
-body {
+body{
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
     background: #03a9f4;
     transition: 0.5s;
+}
+
+body.active{
+    background: #35ca3d
 }
 
 .container{
@@ -60,4 +64,76 @@ body {
     font-size: 16px;
     font-weight: 500;
     border: none;
+}
+
+.formBx{
+    position:absolute;
+    top: 0;
+    left: 0;
+    width: 50%;
+    height: 100%;
+    background: #fff;
+    z-index: 1000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 5px 45px rgba(0,0,0,0.25);
+    transition: 0.5s ease-in-out;
+    overflow: hidden;
+}
+
+.formBx.active{
+    left: 50%;
+}
+
+.formBx .form{
+    position: absolute;
+    left: 0;
+    width: 100%;
+    padding: 50px;
+    transition: 0.5s;
+}
+
+.formBx .signinFrom{
+    transition-delay: 0.25s;
+}
+
+.formBx.active .signinFrom{
+    left: -100%;
+    transition-delay: 0s;
+}
+
+.formBx .form form{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.formBx .form form h3{
+    font-size: 1.5em;
+    color: #333;
+    margin-bottom: 20px;
+    font-weight: 500;
+}
+
+.formBx .form form input{
+    width: 100%;
+    margin-bottom: 20px;
+    padding: 10px;
+    outline: none;
+    font-size: 16px;
+    border: 1px solid #333;
+}
+
+.formBx .form form input[type="submit"]{
+    background: #03a9f4;
+    border: none;
+    color: #fff;
+    max-width: 100px;
+    cursor: pointer;
+}
+
+.formBx .form form .forgot{
+    color: #333;
+
 }
