--- a/style/style.css
+++ b/style/style.css
@@ -94,13 +94,22 @@ body.active{
     transition: 0.5s;
 }
 
-.formBx .signinFrom{
+.formBx .signinForm{
     transition-delay: 0.25s;
 }
 
-.formBx.active .signinFrom{
+.formBx.active .signinForm{
+    left: -100%;
+}
+
+.formBx .signupForm{
     left: -100%;
     transition-delay: 0s;
+}
+
+.formBx.active .signupForm{
+    left: 0;
+    transition-delay: 0.25s;
 }
 
 .formBx .form form{
@@ -133,7 +142,53 @@ body.active{
     cursor: pointer;
 }
 
+.formBx.active .signupForm input[type="submit"]{
+    background: #35ca3d;
+}
+
 .formBx .form form .forgot{
     color: #333;
 
+}
+
+@media (max-width:991px){
+    .container{
+        max-width: 400px;
+        height: 650px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .container .blueBg{
+        top: 0;
+        height: 100%;
+    }
+
+    .formBx{
+        width: 100%;
+        height: 500px;
+        top: 0;
+        box-shadow: none;
+    }
+
+    .blueBg .box{
+        position:   absolute;
+        width:  100px;
+        height: 150px;
+        bottom: 0;
+    }
+
+    .box.signin{
+        top: 0;
+        width: 100%;
+    }
+    .box.signup{
+       width: 100%;
+    }
+
+    .formBx.active{
+        left: 0;
+        top: 150px;
+    }
 }
